# Learning

Rust/forecast_or_stats/arima_example/: Cargo.toml
Rust/forecast_or_stats/arima_example/src/: main.rs
Rust/forecast_or_stats/plotters_example/: Cargo.toml
Rust/forecast_or_stats/plotters_example/src/: main.rs
Rust/forecast_or_stats/that_i_need/src/: main.rs
Rust/l1-multi-hello/: Cargo.toml
Rust/l1-multi-hello/src/: main.rs
Rust/l2-rust-csv-example/: Cargo.toml
Rust/l3-integers/: Cargo.toml
Rust/l3-integers/src/: main.rs
Rust/l4-iterators/: Cargo.toml
Rust/l4-iterators/src/: main.rs
Rust/l5-expressions-instructions/: Cargo.toml
Rust/l5-expressions-instructions/src/: main.rs
Rust/l6-mandelbort/: Cargo.toml
Rust/l6-mandelbort/src/: main.rs
forecast_or_stats/that_i_need/: Cargo.toml
l2-rust-csv-example/src/: main.rs
l3-integers/src/: main.rs
l4-iterators/src/: main.rs
phpjobsexamples/: worker.php
