[package]
name = "that_i_need"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num-traits = "0.2.17"
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
